[gd_scene load_steps=4 format=2]

[ext_resource path="res://RichTextLabel.gd" type="Script" id=1]
[ext_resource path="res://Imagens/Profiles_Dialogues/calum_maddox.png" type="Texture" id=2]
[ext_resource path="res://Imagens/btn_lutar.png" type="Texture" id=3]

[node name="Polygon2D" type="Polygon2D"]
color = Color( 0.133333, 0.133333, 0.133333, 1 )
polygon = PoolVector2Array( 64, 384, 64, 576, 960, 576, 960, 384 )

[node name="Name" type="RichTextLabel" parent="."]
margin_left = 96.0
margin_top = 448.0
margin_right = 928.0
margin_bottom = 511.0

[node name="Speak" type="RichTextLabel" parent="."]
margin_left = 96.0
margin_top = 480.0
margin_right = 928.0
margin_bottom = 544.0
bbcode_enabled = true
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.02
autostart = true

[node name="Profile" type="Sprite" parent="."]
position = Vector2( 96, 288 )
scale = Vector2( 0.649746, 0.649746 )
texture = ExtResource( 2 )
centered = false

[node name="play_button" type="TextureButton" parent="."]
margin_left = 769.362
margin_top = 513.716
margin_right = 919.362
margin_bottom = 551.716
texture_normal = ExtResource( 3 )
[connection signal="timeout" from="Timer" to="Speak" method="_on_Timer_timeout"]
[connection signal="pressed" from="play_button" to="Speak" method="_on_play_button_pressed"]
